fix: mobile spacing

--- a/src/sass/pages/contact/_form.scss
+++ b/src/sass/pages/contact/_form.scss
@@ -120,6 +120,7 @@
     textarea {
       width: 100%;
       max-width: 100%;
+      box-sizing: border-box;
       padding: 16px 20px;
       font-size: 16px;
       border-radius: 28px;
